# staging/src/kubevirt.io/containerized-data-importer-api/pkg/apis/core/v1beta1/types.go
@@ -215,6 +215,9 @@ type DataVolumeSourceRegistry struct {
 	//Platform describes the minimum runtime requirements of the image
 	// +optional
 	Platform *PlatformOptions `json:"platform,omitempty"`
+	//LayerDigest specifies a digest to fetch a single OCI layer directly, bypassing manifest parsing
+	// +optional
+	LayerDigest *string `json:"layerDigest,omitempty"`
 }
 
 type PlatformOptions struct {
